# contract/src/main/java/io/pravega/schemaregistry/contract/generated/rest/model/BackwardAndForward.java
@@ -1,0 +1,142 @@
+/*
+ * Pravega Schema Registry APIs
+ * REST APIs for Pravega Schema Registry.
+ *
+ * OpenAPI spec version: 0.0.1
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+
+package io.pravega.schemaregistry.contract.generated.rest.model;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.pravega.schemaregistry.contract.generated.rest.model.BackwardPolicy;
+import io.pravega.schemaregistry.contract.generated.rest.model.ForwardPolicy;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import javax.validation.constraints.*;
+
+/**
+ * BackwardPolicy and forwardPolicy policy.
+ */
+@ApiModel(description = "BackwardPolicy and forwardPolicy policy.")
+
+public class BackwardAndForward   {
+  @JsonProperty("name")
+  private String name = null;
+
+  @JsonProperty("backwardPolicy")
+  private BackwardPolicy backwardPolicy = null;
+
+  @JsonProperty("forwardPolicy")
+  private ForwardPolicy forwardPolicy = null;
+
+  public BackwardAndForward name(String name) {
+    this.name = name;
+    return this;
+  }
+
+  /**
+   * Get name
+   * @return name
+   **/
+  @JsonProperty("name")
+  @ApiModelProperty(required = true, value = "")
+  @NotNull
+  public String getName() {
+    return name;
+  }
+
+  public void setName(String name) {
+    this.name = name;
+  }
+
+  public BackwardAndForward backwardPolicy(BackwardPolicy backwardPolicy) {
+    this.backwardPolicy = backwardPolicy;
+    return this;
+  }
+
+  /**
+   * BackwardAndForward policy type that describes different types of BackwardPolicy policies like Backward, BackwardTransitive and BackwardTill.
+   * @return backwardPolicy
+   **/
+  @JsonProperty("backwardPolicy")
+  @ApiModelProperty(value = "BackwardAndForward policy type that describes different types of BackwardPolicy policies like Backward, BackwardTransitive and BackwardTill.")
+  public BackwardPolicy getBackwardPolicy() {
+    return backwardPolicy;
+  }
+
+  public void setBackwardPolicy(BackwardPolicy backwardPolicy) {
+    this.backwardPolicy = backwardPolicy;
+  }
+
+  public BackwardAndForward forwardPolicy(ForwardPolicy forwardPolicy) {
+    this.forwardPolicy = forwardPolicy;
+    return this;
+  }
+
+  /**
+   * BackwardAndForward policy type that describes different types of ForwardPolicy policies like Forward, ForwardTransitive and ForwardTill.
+   * @return forwardPolicy
+   **/
+  @JsonProperty("forwardPolicy")
+  @ApiModelProperty(value = "BackwardAndForward policy type that describes different types of ForwardPolicy policies like Forward, ForwardTransitive and ForwardTill.")
+  public ForwardPolicy getForwardPolicy() {
+    return forwardPolicy;
+  }
+
+  public void setForwardPolicy(ForwardPolicy forwardPolicy) {
+    this.forwardPolicy = forwardPolicy;
+  }
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    BackwardAndForward backwardAndForward = (BackwardAndForward) o;
+    return Objects.equals(this.name, backwardAndForward.name) &&
+        Objects.equals(this.backwardPolicy, backwardAndForward.backwardPolicy) &&
+        Objects.equals(this.forwardPolicy, backwardAndForward.forwardPolicy);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(name, backwardPolicy, forwardPolicy);
+  }
+
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class BackwardAndForward {\n");
+    
+    sb.append("    name: ").append(toIndentedString(name)).append("\n");
+    sb.append("    backwardPolicy: ").append(toIndentedString(backwardPolicy)).append("\n");
+    sb.append("    forwardPolicy: ").append(toIndentedString(forwardPolicy)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
