# contract/src/main/java/io/pravega/schemaregistry/contract/generated/rest/model/DenyAll.java
@@ -16,46 +16,37 @@ package io.pravega.schemaregistry.contract.generated.rest.model;
 import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
-import io.pravega.schemaregistry.contract.generated.rest.model.VersionInfo;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
 import javax.validation.constraints.*;
 
 /**
- * Map of Group names to versionInfos in the group. This is for all the groups where the schema is registered.
+ * Policy to Deny all changes.
  */
-@ApiModel(description = "Map of Group names to versionInfos in the group. This is for all the groups where the schema is registered.")
+@ApiModel(description = "Policy to Deny all changes.")
 
-public class AddedTo   {
-  @JsonProperty("groups")
-  private Map<String, VersionInfo> groups = new HashMap<String, VersionInfo>();
+public class DenyAll   {
+  @JsonProperty("name")
+  private String name = null;
 
-  public AddedTo groups(Map<String, VersionInfo> groups) {
-    this.groups = groups;
-    return this;
-  }
-
-  public AddedTo putGroupsItem(String key, VersionInfo groupsItem) {
-    this.groups.put(key, groupsItem);
+  public DenyAll name(String name) {
+    this.name = name;
     return this;
   }
 
   /**
-   * Version for the schema in the group.
-   * @return groups
+   * Get name
+   * @return name
    **/
-  @JsonProperty("groups")
-  @ApiModelProperty(required = true, value = "Version for the schema in the group.")
+  @JsonProperty("name")
+  @ApiModelProperty(required = true, value = "")
   @NotNull
-  public Map<String, VersionInfo> getGroups() {
-    return groups;
+  public String getName() {
+    return name;
   }
 
-  public void setGroups(Map<String, VersionInfo> groups) {
-    this.groups = groups;
+  public void setName(String name) {
+    this.name = name;
   }
 
 
@@ -67,22 +58,22 @@ public class AddedTo   {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    AddedTo addedTo = (AddedTo) o;
-    return Objects.equals(this.groups, addedTo.groups);
+    DenyAll denyAll = (DenyAll) o;
+    return Objects.equals(this.name, denyAll.name);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(groups);
+    return Objects.hash(name);
   }
 
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class AddedTo {\n");
+    sb.append("class DenyAll {\n");
     
-    sb.append("    groups: ").append(toIndentedString(groups)).append("\n");
+    sb.append("    name: ").append(toIndentedString(name)).append("\n");
     sb.append("}");
     return sb.toString();
   }
