# contract/src/main/swagger/SchemaRegistry.yaml
@@ -153,7 +153,7 @@ paths:
           description: Group with given name not found
         500:
           description: Internal server error while fetching Group history
-  /groups/{groupName}/rules:
+  /groups/{groupName}/compatibility:
     parameters:
       - in: path
         name: groupName
@@ -167,25 +167,25 @@ paths:
     put:
       tags:
       - "Group"
-      operationId: updateSchemaValidationRules
-      description: update schema validation rules of an existing Group
+      operationId: updateCompatibility
+      description: update schema compatibility of an existing Group
       consumes:
         - application/json
       parameters:
         - in: body
-          name: UpdateValidationRulesRequest
+          name: UpdateCompatibilityRequest
           description: update group policy
           required: true
           schema:
             type: object
             properties:
-              validationRules:
-                  $ref: "#/definitions/SchemaValidationRules"
-              previousRules:
-                  $ref: "#/definitions/SchemaValidationRules"
+              compatibility:
+                  $ref: "#/definitions/Compatibility"
+              previousCompatibility:
+                  $ref: "#/definitions/Compatibility"
                   nullable: true
             required:
-              - validationRules
+              - compatibility
         - in: query
           name: namespace
           type: string
@@ -198,7 +198,7 @@ paths:
         409:
           description: Write conflict 
         500:
-          description: Internal server error while updating Group's schema validation rules 
+          description: Internal server error while updating Group's schema compatibility 
   /groups/{groupName}/schemas:
     parameters:
       - in: path
@@ -327,7 +327,7 @@ paths:
           description: Group with given name not found
         500:
           description: Internal server error fetching version for schema
-  /groups/{groupName}/schemas/versions/{versionOrdinal}:
+  /groups/{groupName}/schemas/{schemaId}:
     parameters:
       - in: path
         name: groupName
@@ -339,16 +339,16 @@ paths:
         type: string
         description: Namespace in which to lookup group. If no namespace is specified, default namespace is used.
       - in: path
-        name: versionOrdinal
-        description: Version ordinal
+        name: schemaId
+        description: Schema Id
         required: true
         type: integer
         format: int32
     get:
       tags:
       - "Group"
-      operationId: getSchemaFromVersionOrdinal
-      description: Get schema from the version ordinal that uniquely identifies the schema in the group. 
+      operationId: getSchemaForId
+      description: Get schema from the schema id that uniquely identifies the schema in the group. 
       produces:
         - application/json
       responses:
@@ -363,7 +363,7 @@ paths:
     delete:
       tags:
       - "Group"
-      operationId: deleteSchemaVersionOrdinal
+      operationId: deleteSchemaForId
       description: Delete schema identified by version from the group.
       produces:
         - application/json
@@ -400,7 +400,7 @@ paths:
       tags:
       - "Group"
       operationId: getSchemaFromVersion
-      description: Get schema from the version ordinal that uniquely identifies the schema in the group. 
+      description: Get schema from the version number that uniquely identifies the schema in the group. 
       produces:
         - application/json
       responses:
@@ -447,15 +447,15 @@ paths:
       parameters:
         - in: body
           name: ValidateRequest
-          description: Checks if schema is valid with respect to supplied validation rules
+          description: Checks if schema is valid with respect to supplied compatibility
           required: true
           schema:
             type: object
             properties:
               schemaInfo:
                   $ref: "#/definitions/SchemaInfo"
-              validationRules:
-                  $ref: "#/definitions/SchemaValidationRules"
+              compatibility:
+                  $ref: "#/definitions/Compatibility"
             required:
               - schemaInfo      
       produces:
@@ -484,13 +484,13 @@ paths:
       tags:
       - "Group"
       operationId: canRead
-      description: Checks if given schema can be used for reads subject to compatibility policy in the schema validation rules. 
+      description: Checks if given schema can be used for reads subject to compatibility policy in the schema compatibility. 
       consumes:
         - application/json
       parameters:
         - in: body
           name: schemaInfo
-          description: Checks if schema can be used to read the data in the stream based on compatibility rules. 
+          description: Checks if schema can be used to read the data in the stream based on compatibility policy. 
           required: true
           schema:
               $ref: "#/definitions/SchemaInfo"
@@ -684,9 +684,9 @@ definitions:
       serializationFormat:
           description: serialization format for the group.    
           $ref: "#/definitions/SerializationFormat"
-      schemaValidationRules:
-          description: Validation rules to apply while registering new schema.    
-          $ref: "#/definitions/SchemaValidationRules"
+      compatibility:
+          description: Compatibility to apply while registering new schema.    
+          $ref: "#/definitions/Compatibility"
       allowMultipleTypes:
           description: Flag to indicate whether to allow multiple schemas representing distinct objects to be registered in the group.      
           type: boolean
@@ -700,7 +700,7 @@ definitions:
     required:
       - serializationFormat
       - allowMultipleTypes
-      - schemaValidationRules      
+      - compatibility      
   SerializationFormat:
     type: object
     description: Serialization format enum that lists different serialization formats supported by the service. To use additional formats, use serializationFormat.Custom and supply customTypeName.  
@@ -753,14 +753,14 @@ definitions:
         description: Version number that uniquely identifies the schema version among all schemas in the group that share the same Type. 
         type: integer
         format: int32
-      ordinal:
-        description: Version ordinal that uniquely identifies the position of the corresponding schema across all schemas in the group.
+      id:
+        description: schema id that uniquely identifies schema version and describes the absolute order in which the schema was added to the group.
         type: integer
         format: int32
     required:
       - type
       - version
-      - ordinal    
+      - id    
   SchemaWithVersion:
     type: object
     description: Object that encapsulates SchemaInfo and its corresponding VersionInfo objects. 
@@ -811,58 +811,145 @@ definitions:
       - versionInfo
       - codecType      
   Compatibility:
+      type: object
+      description: BackwardAndForward policy.
+      required:
+        - backwardAndForward
+      properties:
+        compatibility:
+          description: BackwardAndForward policy choice.   
+          oneOf:
+            - $ref: '#/definitions/AllowAny'
+            - $ref: '#/definitions/DenyAll'
+            - $ref: '#/definitions/BackwardAndForward'
+          discriminator:
+            propertyName: name
+            mapping:
+              AllowAny: "#/definitions/AllowAny"
+              DenyAll: "#/definitions/DenyAll"
+              BackwardAndForward: "#/definitions/BackwardAndForward"
+  AllowAny:
     type: object
-    description: Schema Compatibility validation rule.
-    required:
-      - name
-      - policy
+    description: Policy to Allow any change. 
     properties:
       name:
         type: string
-        description: Name is used to identify the type of SchemaValidationRule. For Compatibility rule the name should be "Compatibility".
-      policy:
-        description: Compatibility policy enum.
-        type: string
-        enum:
-          - AllowAny
-          - DenyAll
-          - Backward
-          - Forward
-          - ForwardTransitive
-          - BackwardTransitive
-          - BackwardTill
-          - ForwardTill
-          - BackwardAndForwardTill
-          - Full
-          - FullTransitive
-      backwardTill:
-        description: Version for backward till if policy is BackwardTill or BackwardAndForwardTill.
-        $ref: "#/definitions/VersionInfo"        
-      forwardTill:
-        description: Version for forward till if policy is ForwardTill or BackwardAndForwardTill.
-        $ref: "#/definitions/VersionInfo"        
-  SchemaValidationRules:
-    type: object
-    description: Schema validation rules to be applied for new schema addition. Currently only one rule is supported - Compatibility.
-    properties:
-      rules:
-        type: object
-        additionalProperties:
-          $ref: "#/definitions/SchemaValidationRule"
-  SchemaValidationRule:
-    type: object
-    description: Schema validation rule base class.
     required:
-      - rule
+      - name
+  DenyAll:
+    type: object
+    description: Policy to Deny all changes. 
     properties:
-      rule:
-        description: Specific schema validation rule. The only rule we have presently is Compatibility. The "name" is used to identify specific Rule type. The only rule supported in this is Compatibility.  
+      name:
+        type: string
+    required:
+      - name
+  BackwardAndForward:
+    type: object
+    description: BackwardPolicy and forwardPolicy policy. 
+    properties:
+      name:
+        type: string
+      backwardPolicy:
+        description: BackwardAndForward policy type that describes different types of BackwardPolicy policies like Backward, BackwardTransitive and BackwardTill.    
+        $ref: "#/definitions/BackwardPolicy"
+      forwardPolicy:
+        description: BackwardAndForward policy type that describes different types of ForwardPolicy policies like Forward, ForwardTransitive and ForwardTill.  
+        $ref: "#/definitions/ForwardPolicy"
+    required:
+      - name
+  BackwardPolicy:
+    type: object
+    description: BackwardPolicy policy.
+    required:
+      - backwardPolicy
+    properties:
+      backwardPolicy:
+        description: BackwardAndForward type backwardPolicy. Can be one of Backward, backwardTill and backwardTransitive.  
         oneOf:
-          - $ref: '#/definitions/Compatibility'
+          - $ref: '#/definitions/Backward'
+          - $ref: '#/definitions/BackwardTill'
+          - $ref: '#/definitions/BackwardTransitive'
         discriminator:
           propertyName: name
           mapping:
-            Compatibility: '#/definitions/Compatibility'
+            Backward: "#/definitions/Backward"
+            BackwardTill: "#/definitions/BackwardTill"
+            BackwardTransitive: "#/definitions/BackwardTransitive"
+  ForwardPolicy:
+    type: object
+    description: ForwardPolicy policy.
+    required:
+      - forwardPolicy
+    properties:
+      forwardPolicy:
+        description: BackwardAndForward type forwardPolicy. Can be one of forward, forwardTill and forwardTransitive.  
+        oneOf:
+          - $ref: "#/definitions/Forward"
+          - $ref: "#/definitions/ForwardTill"
+          - $ref: "#/definitions/ForwardTransitive"
+        discriminator:
+          propertyName: name
+          mapping:
+            Forward: "#/definitions/Forward"
+            ForwardTill: "#/definitions/ForwardTill"
+            ForwardTransitive: "#/definitions/ForwardTransitive"
+  Backward:
+    type: object
+    description: BackwardPolicy compatibility type which tells the service to check for backwardPolicy compatibility with latest schema.
+    properties:
+      name:
+        type: string
+    required:
+      - name
+  Forward:
+    type: object
+    description: ForwardPolicy compatibility type which tells the service to check for forwardPolicy compatibilty with latest schema.
+    properties:
+      name:
+        type: string
+    required:
+      - name
+  BackwardTransitive:
+    type: object
+    description: BackwardPolicy compatibility type which tells the service to check for backwardPolicy compatibility with all previous schemas.
+    properties:
+      name:
+        type: string
+    required:
+      - name
+  ForwardTransitive:
+    type: object
+    description: ForwardPolicy compatibility type which tells the service to check for forwardPolicy compatibility with all previous schemas.
+    properties:
+      name:
+        type: string
+    required:
+      - name
+  BackwardTill:
+    type: object
+    description: BackwardPolicy compatibility which tells the service to check for backwardPolicy compatibility with all previous schemas till specific version.
+    properties:
+      name:
+        type: string
+      version:
+        description: Whether given schema is valid with respect to existing group schemas against the configured compatibility. 
+        $ref: "#/definitions/VersionInfo"
+    required:
+      - name
+      - version    
+  ForwardTill:
+    type: object
+    description: ForwardPolicy compatibility which tells the service to check for forwardPolicy compatibility with all previous schemas till specific version.
+    properties:
+      name:
+        type: string
+      version:
+        description: Whether given schema is valid with respect to existing group schemas against the configured compatibility. 
+        $ref: "#/definitions/VersionInfo"
+    required:
+      - name
+      - version
   CodecTypesList:
     type: object
     description: Response object for listCodecTypes.
@@ -877,7 +964,7 @@ definitions:
     description: Response object for validateSchema api.
     properties:
       valid:
-        description: Whether given schema is valid with respect to existing group schemas against the configured validation rules. 
+        description: Whether given schema is valid with respect to existing group schemas against the configured compatibility. 
         type: boolean
     required:
       - valid    
@@ -886,13 +973,13 @@ definitions:
     description: Response object for canRead api.
     properties:
       compatible:
-        description: Whether given schema is compatible and can be used for reads. Compatibility is checked against existing group schemas subject to group's configured compatibility policy. 
+        description: Whether given schema is compatible and can be used for reads. BackwardAndForward is checked against existing group schemas subject to group's configured compatibility policy. 
         type: boolean
     required:
       - compatible    
   GroupHistoryRecord:
       type: object
-      description: Group History Record that describes each schema evolution - schema information, version generated for the schema, time and rules used for schema validation.
+      description: Group History Record that describes each schema evolution - schema information, version generated for the schema, time and compatibility policy used for schema validation.
       properties:
         schemaInfo:
           description: Schema information object.
@@ -900,9 +987,9 @@ definitions:
         version:
           description: Schema version information object.
           $ref: "#/definitions/VersionInfo"
-        validationRules:
-          description: Schema validation rules applied.
-          $ref: "#/definitions/SchemaValidationRules"
+        compatibility:
+          description: Schema compatibility applied.
+          $ref: "#/definitions/Compatibility"
         timestamp:
           description: Timestamp when the schema was added.
           type: integer
@@ -913,7 +1000,7 @@ definitions:
       required:
         - schemaInfo
         - version
-        - validationRules
+        - compatibility
         - timestamp      
   GroupHistory:
     type: object
