# samples/src/main/java/io/pravega/schemaregistry/samples/demo/sql/SQLApp.java
@@ -26,10 +26,10 @@ import io.pravega.schemaregistry.GroupIdGenerator;
 import io.pravega.schemaregistry.client.SchemaRegistryClient;
 import io.pravega.schemaregistry.client.SchemaRegistryClientConfig;
 import io.pravega.schemaregistry.client.SchemaRegistryClientFactory;
-import io.pravega.schemaregistry.contract.data.Compatibility;
+import io.pravega.schemaregistry.contract.data.BackwardAndForward;
 import io.pravega.schemaregistry.contract.data.GroupProperties;
 import io.pravega.schemaregistry.contract.data.SchemaInfo;
-import io.pravega.schemaregistry.contract.data.SchemaValidationRules;
+import io.pravega.schemaregistry.contract.data.Compatibility;
 import io.pravega.schemaregistry.contract.data.SchemaWithVersion;
 import io.pravega.schemaregistry.contract.data.SerializationFormat;
 import io.pravega.schemaregistry.schemas.AvroSchema;
@@ -177,7 +177,7 @@ public class SQLApp {
         }
 
         String tableGroupId = getTableGroupId(tableName);
-        SchemaValidationRules validationRules = SchemaValidationRules.of(Compatibility.denyAll());
+        Compatibility validationRules = Compatibility.of(BackwardAndForward.denyAll());
         SerializationFormat serializationFormat = SerializationFormat.custom("table");
 
         ImmutableMap.Builder<String, String> map = ImmutableMap.builder();
